# unipi-grasp-datasets

./: README.md
iros2015_grasp_db/: CMakeLists.txt  README.md  package.xml
iros2015_grasp_db/data/: .gitignore
iros2015_grasp_db/launch/: config.rviz  playExperiment.launch  uploadSetup.launch
pacman_wp2_db/: CMakeLists.txt  README.md
pacman_wp2_db/data/: startRecording.sh
pacman_wp2_grasp_db/: CMakeLists.txt  README.md  package.xml
pacman_wp2_grasp_db/data/: startRecording.sh
pacman_wp2_grasp_db/launch/: config.rviz  playExperiment.launch  uploadSetup.launch
pacman_wp2_grasp_db/urdf/: hand.urdf.xacro
scenario1/: CMakeLists.txt  README.md  package.xml
scenario1/data/: .gitignore  startRecording.sh
scenario1/launch/: config.rviz  playData.launch  playExperiment.launch  uploadSetup.launch
scenario1/media/: scenario1.eps
scenario1/urdf/: hand.urdf.xacro
softhand_gazebo_grasp_db/: CMakeLists.txt  README.md  package.xml
softhand_gazebo_grasp_db/config/: right_hand_controller.yaml
softhand_gazebo_grasp_db/data/: startRecording.sh
softhand_gazebo_grasp_db/launch/: uploadSetup.launch
softhand_gazebo_grasp_db/urdf/: cylinder.urdf.xacro  right_hand.urdf.xacro
sync_data/: CMakeLists.txt  package.xml
sync_data/launch/: Scenario1.launch
sync_data/msg/: Scenario1Data.msg
sync_data/src/: scenario1sync.cpp
