<?xml version="1.0"?>
<package>
  <name>scenario1</name>
  <version>0.0.0</version>
  <description>The scenario1 package</description>

  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>


  <license>GPLv2</license>

  <!-- developed under the PaCMan project -->
  <url type="project">http://www.pacman-project.eu/</url>
  <url type="repository">https://github.com/CentroEPiaggio/unipi-grasp-datasets</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
