<?xml version="1.0"?>
<package>
  <name>sync_data</name>
  <version>0.0.0</version>
  <description>A package to synchronize data in experiments for WP2 within the PaCMan Project</description>

  <maintainer email="fspinelli@gmail.com">Federico Spinelli</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>phase_space</build_depend>
  <build_depend>intrinsic_tactile_toolbox</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>phase_space</run_depend>
  <run_depend>intrinsic_tactile_toolbox</run_depend>

  <export>

  </export>
</package>